# mlopsr-temp

./: .gitignore  Dockerfile  Makefile  README.md  env.sample  model.R  plumber.R  prep.R  pyproject.toml  train.R
cards/: model_card_temp.Rmd
config/: config.yml
